--- a/client/src/components/dayDetails/dayDetails.css
+++ b/client/src/components/dayDetails/dayDetails.css
@@ -1,7 +1,7 @@
 .day-details {
-  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: stretch;
   align-self: stretch;
+  margin-bottom: 20px;
 }
